--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -164,25 +164,25 @@
                     <div class="wizard-navigation">
                         <ul>
                             <li id="step1" [class.liDisabled]="!stepsEnabled(1)" (click)="navigate(1)"><a
-                                    href="#covid19" data-toggle="tab">Step 1 (COVID19-Screening)</a>
+                                    href="#covid19" data-toggle="tab">Step 1 : COVID19-Screening</a>
                             </li>
                             <!-- <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
                                         href="#appointment-type" data-toggle="tab">Step 2 (Service Type)</a></li> -->
                             <li id="step3" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
-                                    href="#exam-type" data-toggle="tab">Step 2
-                                    (Appointment Type)</a>
+                                    href="#exam-type" data-toggle="tab">Step 2 :
+                                    Appointment Type</a>
                             </li>
                             <li id="step4" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
-                                    href="#date-time" data-toggle="tab">Step 3 (Date & Time)</a></li>
+                                    href="#date-time" data-toggle="tab">Step 3 : Date and Time</a></li>
                             <!-- <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
                                         href="#optician-appointment" data-toggle="tab">Step 4 (Optician
                                         Appointment)</a></li> -->
                             <li id="step6" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
-                                    href="#confirm" data-toggle="tab">Step 4
-                                    (Confirmation)</a></li>
+                                    href="#confirm" data-toggle="tab">Step 4 :
+                                    Confirmation</a></li>
                             <li id="step7" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
-                                    href="#summary" data-toggle="tab">Step 5
-                                    (Summary)</a></li>
+                                    href="#summary" data-toggle="tab">Step 5 :
+                                    Summary</a></li>
                         </ul>
                     </div>
 
@@ -238,110 +238,108 @@
     <!--  big container -->
 
     <div class="footer">
-            <footer id="footer" class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
-                <div class="footer__columns flex-w p-b-90">
-                    <div class="w-size6 p-t-30 p-l-15 p-r-15 respon3">
-                        <h4 class="s-text12 p-b-30">
-                            GET IN TOUCH
-                        </h4>
-                        <div>
-                            <p class="s-text7 w-size27">
-                                <img style="width:200px; margin-bottom:20px;"
-                                    src="../../../../assets/img/saved_resource">
-                                <br>
-                                <strong style="font-size:16px; font-family:'poppins-black'; font-weight:800">GET IN
-                                    TOUCH</strong><br>
-                                <a style="color:#333;" href="mailto:staff@eyemaxx.ca?subject=Questions"
-                                    title="">staff@eyemaxx.ca</a> <br>
-                                Tel: 613.216.6076
-                            </p>
-                            <div class="footer__social-icons flex-m p-t-30">
+        <footer id="footer" class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
+            <div class="footer__columns flex-w p-b-90">
+                <div class="w-size6 p-t-30 p-l-15 p-r-15 respon3">
+                    <h4 class="s-text12 p-b-30">
+                        GET IN TOUCH
+                    </h4>
+                    <div>
+                        <p class="s-text7 w-size27">
+                            <img style="width:200px; margin-bottom:20px;" src="../../../../assets/img/saved_resource">
+                            <br>
+                            <strong style="font-size:16px; font-family:'poppins-black'; font-weight:800">GET IN
+                                TOUCH</strong><br>
+                            <a style="color:#333;" href="mailto:staff@eyemaxx.ca?subject=Questions"
+                                title="">staff@eyemaxx.ca</a> <br>
+                            Tel: 613.216.6076
+                        </p>
+                        <div class="footer__social-icons flex-m p-t-30">
 
 
 
-                                <a href="https://www.facebook.com/eyemaxx613/"
-                                    class="fs-18 color1 p-r-20 footer-social-button fa fa-facebook"
-                                    title="Eyemaxx Optical Studio on Facebook">
-                                </a>
+                            <a href="https://www.facebook.com/eyemaxx613/"
+                                class="fs-18 color1 p-r-20 footer-social-button fa fa-facebook"
+                                title="Eyemaxx Optical Studio on Facebook">
+                            </a>
 
 
-                                <a data-toggle="tooltip" class="fs-18 color1 p-r-20 footer-social-button fa fa-twitter"
-                                    data-placement="bottom" href="https://twitter.com/eyemaxx613" title=""
-                                    data-original-title="Eyemaxx Optical Studio on Twitter">
-                                </a>
+                            <a data-toggle="tooltip" class="fs-18 color1 p-r-20 footer-social-button fa fa-twitter"
+                                data-placement="bottom" href="https://twitter.com/eyemaxx613" title=""
+                                data-original-title="Eyemaxx Optical Studio on Twitter">
+                            </a>
 
 
 
 
-                                <a data-toggle="tooltip"
-                                    class="fs-18 color1 p-r-20 footer-social-button fa fa-instagram"
-                                    data-placement="bottom" href="https://www.instagram.com/eyemaxx613/" title=""
-                                    data-original-title="Eyemaxx Optical Studio on Instagram">
-                                </a>
-
+                            <a data-toggle="tooltip" class="fs-18 color1 p-r-20 footer-social-button fa fa-instagram"
+                                data-placement="bottom" href="https://www.instagram.com/eyemaxx613/" title=""
+                                data-original-title="Eyemaxx Optical Studio on Instagram">
+                            </a>
 
 
 
 
 
-                            </div>
+
                         </div>
                     </div>
-                    <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-                        <h4 class="s-text12 p-b-30">Quick Links</h4>
-                        <ul>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/" class="s-text7">HOME</a></li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/hours" class="s-text7">HOURS</a>
-                            </li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/frames" class="s-text7">FRAMES</a>
-                            </li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/lenses-brands"
-                                    class="s-text7">LENSES</a></li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting"
-                                    class="s-text7">CONTACTS</a></li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/blogs/ive-been-framed"
-                                    class="s-text7">BLOG</a></li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/contact-us" class="s-text7">CONTACT
-                                    US</a></li>
-
-                            <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/book-an-eye-exam"
-                                    class="s-text7">BOOK AN EYE EXAM</a></li>
-
-                        </ul>
-                    </div>
-                    <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-                        <h4 class="s-text12 p-b-30"></h4>
-                        <ul>
-
-                        </ul>
-                    </div>
-                    <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
-                        <h4 class="s-text12 p-b-30"></h4>
-                        <ul>
-
-                        </ul>
-                    </div>
-                    <div class="w-size8 p-t-30 p-l-15 p-r-15 respon3">
-
-
-
-
-                    </div>
                 </div>
-                <div class="t-center p-l-15 p-r-15">
-                    <div class="t-center s-text7 p-t-20">
-                        Copyright ©️ 2020 All rights reserved.
-                        Template by <a href="https://colorlib.com/">Colorlib</a>
-                    </div>
+                <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
+                    <h4 class="s-text12 p-b-30">Quick Links</h4>
+                    <ul>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/" class="s-text7">HOME</a></li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/hours" class="s-text7">HOURS</a>
+                        </li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/frames" class="s-text7">FRAMES</a>
+                        </li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/lenses-brands"
+                                class="s-text7">LENSES</a></li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/contact-lenses-and-fitting"
+                                class="s-text7">CONTACTS</a></li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/blogs/ive-been-framed"
+                                class="s-text7">BLOG</a></li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/contact-us" class="s-text7">CONTACT
+                                US</a></li>
+
+                        <li class="p-b-9"><a href="https://www.eyemaxx.ca/pages/book-an-eye-exam" class="s-text7">BOOK
+                                AN EYE EXAM</a></li>
+
+                    </ul>
                 </div>
-            </footer>
+                <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
+                    <h4 class="s-text12 p-b-30"></h4>
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
+                    <h4 class="s-text12 p-b-30"></h4>
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="w-size8 p-t-30 p-l-15 p-r-15 respon3">
+
+
+
+
+                </div>
+            </div>
+            <div class="t-center p-l-15 p-r-15">
+                <div class="t-center s-text7 p-t-20">
+                    Copyright ©️ 2020 All rights reserved.
+                    Template by <a href="https://colorlib.com/">Colorlib</a>
+                </div>
+            </div>
+        </footer>
     </div>
 
 </div>
@@ -361,12 +359,11 @@
         <p-button type="button" icon="pi pi-check" (click)="popUpNavigation('appointment')"
             label="Book another appointment" class="p-button-raised"></p-button>
         <button pButton pRipple type="button" icon="pi pi-home" (click)="popUpNavigation('home')" label="Go to home"
-            class="p-button-help">
+            class="p-button-secondary">
         </button>
     </ng-template>
 </p-dialog>
 
 <div class="progress-spinner" *ngIf="bookAppointmentSpinnerEnabled">
-    <p-progressSpinner [style]="{width: '150px', height: '150px'}" styleClass="custom-spinner" strokeWidth="5"
-        fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+    <p-progressSpinner></p-progressSpinner>
 </div>
