--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -19,7 +19,7 @@
 
     </div>
 </div>
-<div class="row">
+<div class="row" style="margin-top: 2%;">
     <div class="container-menu-header-v2 p-t-26" style="background-color:white">
         <div class="topbar2">
             <div class="topbar-social">
