does cream stupid done footer and header

--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -19,7 +19,8 @@
 
     </div>
 </div>
-<div class="row" style="margin-top: 2%;">
+<!-- <div class="row" style="margin-top: 2%;"> -->
+  <div class="row">
     <div class="container-menu-header-v2 p-t-26" style="background-color:white">
         <div class="topbar2">
             <div class="topbar-social">
@@ -36,7 +37,7 @@
                 </a>
             </div>
             <!-- Logo2 -->
-            <a href="https://www.eyemaxx.ca/" itemprop="url" class="logo2">
+            <a style="margin-top: 2%;" href="https://www.eyemaxx.ca/" itemprop="url" class="logo2">
                 <img src="../../../../assets/img/eyemax-logo.png" alt="Eyemaxx Optical Studio" itemprop="logo" class="">
             </a>
             <div class="topbar-child2">
@@ -197,7 +198,7 @@
                                     value='Finish' />
                             </div>
                             <div class="pull-left" *ngIf="currentStepStatus().order != 1">
-                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd' 
+                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd'
                                     name='previous' value='Previous' />
                             </div>
                             <div class="clearfix"></div>
@@ -210,7 +211,7 @@
                                     value='Finish' />
                             </div>
                             <div class="pull-left">
-                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd' 
+                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd'
                                     name='previous' value='Previous' />
                             </div>
                             <div class="clearfix"></div>
@@ -236,6 +237,7 @@
     </div>
     <!-- row -->
     <!--  big container -->
+  </div>
 
     <div class="footer">
         <footer id="footer" class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
@@ -342,7 +344,6 @@
         </footer>
     </div>
 
-</div>
 
 
 <!-- <p-confirmDialog [style]="{width: '50vw'}" key="positionDialog" [position]="'top'" [baseZIndex]="10000">
