--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.css
@@ -9,3 +9,24 @@
      border-style: solid;
      border-color: #79a0df;
  }
+
+ ::ng-deep body .p-datepicker .p-datepicker-header {
+     color: #495057;
+     background: #ffffff;
+     font-weight: 900;
+     font-size: large;
+     margin: 0;
+     border-bottom: 1px solid #dee2e6;
+     border-top-right-radius: 3px;
+     border-top-left-radius: 3px;
+ }
+
+ ::ng-deep body .p-datepicker table {
+     font-size: 1.5rem;
+     margin: 0.5rem 0;
+ }
+
+ /* ::ng-deep body .p-calendar .p-datepicker {
+     min-width: 200%;
+     margin-left: -7%;
+ } */
