--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -122,11 +122,10 @@
             <li>OHIP: ODSP (V450A)</li>
             <li>OHIP: Ontario Works (V451A)</li>
         </div> -->
-
+        <h4 class="info-text" *ngIf="isOptomitrist">Please select an Optometrist / Any Optometrist</h4>
+        <h4 *ngIf="StaffErrorMessage" class="info-text" style="color: red;">The selected staff doesnt have any
+            available appointments.</h4>
         <div class="col-sm-10 col-sm-offset-1" *ngIf="isOptomitrist">
-            <h4 class="info-text">Please select an Optometrist / Any Optometrist</h4>
-            <h4 *ngIf="StaffErrorMessage" class="info-text" style="color: red;">The selected staff doesnt have any
-                available appointments.</h4>
             <div class="col-sm-1">
             </div>
             <div class="col-sm-2" *ngIf="isOptomitrist" (click)="SelectStaff(-1)">
